# schweizer_messer

./: .gitignore  CMakeLists.txt  LICENSE  README  Readme.md  changelog  dependencies.rosinstall  stack.xml
numpy_eigen/: CMakeLists.txt  README.md  manifest.xml  package.xml  setup.py
numpy_eigen/cmake/: add_python_export_library.cmake
numpy_eigen/include/numpy_eigen/: NumpyEigenConverter.hpp  boost_python_headers.hpp  boost_python_headers.hpp~  type_traits.hpp
numpy_eigen/python/numpy_eigen/: __init__.py
numpy_eigen/src/: NumpyEigenConverter.hpp  autogen_files.cmake  autogen_test_files.cmake  create_export_module.py  numpy_eigen_export_module.cpp  numpy_eigen_test_module.cpp  type_traits.hpp
numpy_eigen/src/autogen_module/: import_01_01_double.cpp  import_01_01_float.cpp  import_01_01_int.cpp  import_01_02_double.cpp  import_01_02_float.cpp  import_01_02_int.cpp  import_01_03_double.cpp  import_01_03_float.cpp  import_01_03_int.cpp  import_01_04_double.cpp  import_01_04_float.cpp  import_01_04_int.cpp  import_01_05_double.cpp  import_01_05_float.cpp  import_01_05_int.cpp  import_01_06_double.cpp  import_01_06_float.cpp  import_01_06_int.cpp  import_01_07_double.cpp  import_01_07_float.cpp  import_01_07_int.cpp  import_01_08_double.cpp  import_01_08_float.cpp  import_01_08_int.cpp  import_01_09_double.cpp  import_01_09_float.cpp  import_01_09_int.cpp  import_01_10_double.cpp  import_01_10_float.cpp  import_01_10_int.cpp  import_01_11_double.cpp  import_01_11_float.cpp  import_01_11_int.cpp  import_01_12_double.cpp  import_01_12_float.cpp  import_01_12_int.cpp  import_01_13_double.cpp  import_01_13_float.cpp  import_01_13_int.cpp  import_01_14_double.cpp  (+1021 more)
numpy_eigen/src/autogen_test_module/: numpy_eigen_test_module.cpp  test_01_01_double.cpp  test_01_01_float.cpp  test_01_01_int.cpp  test_01_02_double.cpp  test_01_02_float.cpp  test_01_02_int.cpp  test_01_03_double.cpp  test_01_03_float.cpp  test_01_03_int.cpp  test_01_04_double.cpp  test_01_04_float.cpp  test_01_04_int.cpp  test_01_05_double.cpp  test_01_05_float.cpp  test_01_05_int.cpp  test_01_06_double.cpp  test_01_06_float.cpp  test_01_06_int.cpp  test_01_07_double.cpp  test_01_07_float.cpp  test_01_07_int.cpp  test_01_08_double.cpp  test_01_08_float.cpp  test_01_08_int.cpp  test_01_09_double.cpp  test_01_09_float.cpp  test_01_09_int.cpp  test_01_10_double.cpp  test_01_10_float.cpp  test_01_10_int.cpp  test_01_11_double.cpp  test_01_11_float.cpp  test_01_11_int.cpp  test_01_12_double.cpp  test_01_12_float.cpp  test_01_12_int.cpp  test_01_13_double.cpp  test_01_13_float.cpp  test_01_13_int.cpp  (+825 more)
numpy_eigen/src/numpy_eigen/: __init__.py
numpy_eigen/src/numpy_eigen_test/: __init__.py
numpy_eigen/test/: numpy_eigen_tests.py
sm_boost/: CMakeLists.txt  manifest.xml  package.xml
sm_boost/include/boost/: portable_binary_iarchive.hpp
sm_boost/src/: portable_binary_oarchive.cpp
sm_common/: CMakeLists.txt  manifest.xml  package.xml
sm_common/include/sm/: Id.hpp  NumericalComparison.hpp  assert_macros.hpp  build_id.hpp  fasthash.h  hash_id.hpp  is_binary_equal.hpp  maths.hpp  numerical_comparisons.hpp  progress_info.hpp  serialization_macros.hpp  source_file_pos.hpp  string_routines.hpp
sm_common/src/: build_id.cpp  fasthash.cpp  progress_info.cpp
sm_common/test/: assert_macros.cpp  assert_macros_always_assert.cpp  assert_macros_dbg.cpp  hash_id.cpp  serialization_macros.cpp
sm_database/: CMakeLists.txt  manifest.xml  package.xml
sm_database/include/boost/: portable_binary_oarchive.hpp
sm_database/test/: SerializedMap.cpp
sm_deprecation/: CMakeLists.txt  package.xml
sm_deprecation/include/sm/: Deprecation.h
sm_deprecation/test/: CMakeLists.txt  test_deprecation.cpp
sm_doc/: CMakeLists.txt  manifest.xml
sm_kinematics/: CMakeLists.txt  manifest.xml  package.xml
sm_kinematics/src/: EulerAnglesZXY.cpp  HomogeneousPoint.cpp  RotationVector.cpp  Transformation.cpp  UncertainHomogeneousPoint.cpp  UncertainTransformation.cpp  homogeneous_coordinates.cpp  quaternion_algebra.cpp  rotations.cpp
sm_kinematics/test/: HomogeneousPoint.cpp  PointTestHarness.hpp  QuaternionTests.cpp  RotationalKinematicsTests.cpp  TransformationTests.cpp  UncertainTransformationTests.cpp  homogeneous_coordinates.cpp  three_point_methods.cpp  transformations.cpp
sm_logging/: CMakeLists.txt  manifest.xml  package.xml
sm_logging/include/sm/: logging.hpp
sm_logging/src/: Formatter.cpp  Levels.cpp  Logger.cpp  LoggingGlobals.cpp  StdOutLogger.cpp
sm_logging/test/: logTest.cpp
sm_matlab/: CMakeLists.txt  Makefile  Readme.txt  manifest.xml  package.xml
sm_matlab/demo/: demo.cpp
sm_matlab/src/: Engine.cpp
sm_pose_graph/: CMakeLists.txt  mainpage.dox  manifest.xml
sm_pose_graph/src/: Edge.cpp  PoseGraph.cpp  Vertex.cpp  module.cpp
sm_pose_graph/src/python/: Edge.cpp  PoseGraph.cpp  (+1 more)
sm_pose_graph/test/: PoseGraphSerializationTests.cpp  PoseGraphTests.cpp  PoseGraphUpdateAlgorithmDevTests.cpp
sm_property_tree/: CMakeLists.txt  manifest.xml
sm_property_tree/src/: BoostPropertyTree.cpp  BoostPropertyTreeImplementation.cpp  BoostPropertyTreeLoader.cpp  BoostPropertyTreeSupport.cpp  PropertyTree.cpp
sm_property_tree/test/: BoostPropertyTreeImplementation.cpp
sm_python/: CMakeLists.txt  manifest.xml  package.xml  setup.py  testQuatStat.py
sm_python/cmake/: add_python_export_library.cmake
sm_python/src/: Logging.cpp  exportEigen.cpp  exportHomogeneousPoint.cpp  exportMatrixArchive.cpp  exportPropertyTree.cpp  exportTimestampCorrector.cpp  exportTransformation.cpp  exportValueStoreRef.cpp  export_quaternion_algebra.cpp  export_rotations.cpp  module.cpp
sm_python/test/: Test.py
sm_random/: CMakeLists.txt  manifest.xml
sm_random/src/: random.cpp
sm_timing/: CMakeLists.txt  manifest.xml
sm_timing/src/: NsecTimeUtilities.cpp  Timer.cpp
sm_timing/test/: TestNsecTimeUtilities.cpp  TestTimestampCorrector.cpp
sm_value_store/: CMakeLists.txt  package.xml
sm_value_store/src/: PrefixedValueStore.cpp  PropertyTreeValueStore.cpp  ValueStore.cpp  VerboseValueStore.cpp
sm_value_store/test/: ValueStore.cpp
(+133 files in other folders)
