<?xml version="1.0"?>
<package>
  <name>sm_common</name>
  <version>0.0.1</version>
  <description>sm_common</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <cpp cflags="`rosboost-cfg --cflags` -I${prefix}/include -std=c++0x -D__STRICT_ANSI__"
         lflags="`rosboost-cfg --lflags filesystem,system` -L`rosboost-cfg --root`/lib"/>
  </export>
</package>
