<?xml version="1.0"?>
<package>
  <name>sm_deprecation</name>
  <version>0.0.1</version>
  <description>sm_deprecation</description>

  <maintainer email="hannes.sommer@mavt.ethz.ch">Hannes Sommer</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
