<?xml version="1.0"?>
<package>
  <name>sm_logging</name>
  <version>0.0.1</version>
  <description>sm_logging</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
          <cpp cflags="-I${prefix}/include -std=c++0x"
     lflags="`rosboost-cfg --lflags filesystem,system` -Wl,-rpath,${prefix}/lib -L${prefix}/lib -lsm_logging"/>
  </export>
</package>
