<?xml version="1.0"?>
<package format="3">
  <name>sm_python</name>
  <version>0.0.1</version>
  <description>sm_python</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>sm_common</build_depend>
  <build_depend>numpy_eigen</build_depend>
  <build_depend>catkin_boost_python_buildtool</build_depend>
  <build_depend>sm_kinematics</build_depend>
  <build_depend>sm_timing</build_depend>
  <build_depend>sm_logging</build_depend>
  <build_depend>sm_matrix_archive</build_depend>
  <build_depend>sm_property_tree</build_depend>
  <build_depend> sm_value_store</build_depend>

  <exec_depend>python-tk</exec_depend>
  <exec_depend>sm_common</exec_depend>
  <exec_depend>numpy_eigen</exec_depend>
  <exec_depend>catkin_boost_python_buildtool</exec_depend>
  <exec_depend>sm_kinematics</exec_depend>
  <exec_depend>sm_timing</exec_depend>
  <exec_depend>sm_logging</exec_depend>
  <exec_depend>sm_matrix_archive</exec_depend>
  <exec_depend>sm_property_tree</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
</package>
